added the react rails gem

--- a/Shop/Gemfile
+++ b/Shop/Gemfile
@@ -8,6 +8,8 @@ gem 'puma', '~> 2.15'
 
 gem 'pg', '~> 0.20'
 
+gem 'react-rails', '~> 1.10'
+
 # Use sqlite3 as the database for Active Record
 # gem 'sqlite3'
 # Use SCSS for stylesheets
