--- a/Shop/Gemfile
+++ b/Shop/Gemfile
@@ -9,6 +9,7 @@ gem 'puma', '~> 2.15'
 gem 'pg', '~> 0.20'
 
 gem 'react-rails', '~> 1.10'
+gem "bower-rails", "~> 0.10.0"
 
 # Use sqlite3 as the database for Active Record
 # gem 'sqlite3'
@@ -23,6 +24,7 @@ gem 'coffee-rails', '~> 4.1.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
+gem 'jquery-ui-rails', '~> 5.0'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
