--- a/Shop/Gemfile
+++ b/Shop/Gemfile
@@ -40,6 +40,10 @@ gem 'font-awesome-sass', '~> 4.5'
 gem 'uglifier', '>= 1.3.0'
 gem 'autoprefixer-rails', '~> 6.3'
 
+
+
+gem 'seed_dump'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
